<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_perfil"
            android:icon="@drawable/perfil_icon"
            android:title="@string/perfil" />
        <item
            android:id="@+id/nav_propiedades"
            android:icon="@drawable/propiedad_icon"
            android:title="@string/mis_propiedades" />
        <item
            android:id="@+id/nav_inquilinos"
            android:icon="@drawable/inquilinos_icon"
            android:title="@string/inquilinos" />
        <item
            android:id="@+id/nav_pagos"
            android:icon="@drawable/pagos_icon"
            android:title="@string/pagos" />
        <item
            android:id="@+id/nav_contratos"
            android:icon="@drawable/contratos_icon"
            android:title="@string/contratos" />
    </group>

    <item android:title="@string/salida">
        <menu>
            <item
                android:id="@+id/nav_salir"
                android:icon="@drawable/cerrar_sesion_icon"
                android:title="@string/cerrar_sesion" />
        </menu>
    </item>

</menu>
