<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/tvNumeroPago"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#4CAF50"
        android:text="@string/numero_de_pago" />

    <TextView
        android:id="@+id/tvValueNumeroPago"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/value_numero_pago" />

    <TextView
        android:id="@+id/tvFecha"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#4CAF50"
        android:text="@string/value_fecha" />

    <TextView
        android:id="@+id/tvValueFecha"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/value_fecha" />

    <TextView
        android:id="@+id/tvImportePago"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#4CAF50"
        android:text="@string/importe_pago" />

    <TextView
        android:id="@+id/tvValueImportePago"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/value_importe_pago" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#3F51B5" />

</LinearLayout>